--- a/.gitignore
+++ b/.gitignore
@@ -84,8 +84,7 @@ web_modules/
 .env.local
 .env.production
 .env.develop
-.env.2
-.env.*
+*.env
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
