--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,7 @@ web_modules/
 .env.local
 .env.production
 .env.develop
+.env.staging
 *.env
 # parcel-bundler cache (https://parceljs.org/)
 .cache
