--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,7 @@ web_modules/
 .env.develop
 .env.staging
 *.env
+env-file.zip
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
