--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "stop:all":"pm2 stop all",
     "dlt:all":"pm2 delete all",
     "dev": "nodemon -r tsconfig-paths/register src/app.ts | bunyan",
-    "test": "jest --coverage=true -w=1 --forceExit --detectOpenHandlers --watchAll=false",
+    "test": "jest --coverage=true -w=1 --forceExit --detectOpenHandles --watchAll=false",
     "build": "ttsc -p . && cp .env.production ./build/.env",
     "seeds:dev": "npx ts-node src/seeds.ts",
     "seeds:prod": "npx ts-node ./build/src/seeds.js"
